# studies

./: .gitignore  after_refactoring_akuka.cpp
CMake/: build.sh  build_test.sh
CMake/projects/: CMakeLists.txt
CMake/projects/Long_numbers/: CMakeLists.txt
CMake/projects/Long_numbers/src/: long_number.cpp  long_number.hpp
CMake/projects/Long_numbers/test/: CMakeLists.txt  ibusko_test.cpp  test_long_number.cpp  test_operators.cpp
CMake/projects/bubble_sort/: CMakeLists.txt
CMake/projects/bubble_sort/src/: bubble_sort.cpp  main.cpp
CMake/projects/bubble_sort/test/: CMakeLists.txt  test_bubble.cpp
CMake/projects/double_linked_list/: CMakeLists.txt
CMake/projects/double_linked_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp
CMake/projects/double_linked_list/test/: CMakeLists.txt  templates_list.cpp  test_list.cpp  (+1 more)
CMake/projects/menu/: cmake_install.cmake
CMake/projects/vector/: CMakeLists.txt
menu/: build.sh  menu  menu.c  menu.cpp  menu.h  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
merge_sort/: build.sh  merge_busko.cpp  sortings.cpp  sortings.hpp
projects/: CMakeLists.txt
projects/bubble sort/include.h/: sortings_busko.hpp
projects/bubble sort/src/: bubble_sort.cpp  busko.cpp
projects/bubble_sort/src/: CMakeLists.txt  bubble_sort.hpp
projects/classes/: CMakeLists.txt
projects/classes/src/: long_number.cpp  long_number.hpp
projects/classes/test/: CMakeLists.txt  test_operators.cpp
projects/menu/: CMakeLists.txt  menu_functions.hpp
projects/menu/src/: menu.cpp
(+5 files in other folders)
